making the latest changes

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -543,6 +543,7 @@
         <item>HD100</item>
     </string-array>
     <string-array name="codepage_list">
+        <item>"Latin I"</item>
         <item>"Default"</item>
         <item>"Chinese Simplified"</item>
         <item>"USA"</item>
